공통 차트 생성 및 연결